working on ie web fixes

--- a/style/unminified/style.less
+++ b/style/unminified/style.less
@@ -561,6 +561,15 @@ div.text{ /* text columns for index and links page */
   }
 }
 
+// load state for list opacity with piece
+.listLoad{
+  opacity: 0.1; /* Standard: FF gt 1.5, Opera, Safari */
+  filter: alpha(opacity=10); /* IE lt 8 */
+  -ms-filter: "alpha(opacity=10)"; /* IE 8 */
+  -khtml-opacity: 0.1; /* Safari 1.x */
+  -moz-opacity: 0.1; /* FF lt 1.5, Netscape */
+}
+
 // the fade on the right of the piece list
 #webFade{
   width: 40px;
